# BroAI

./: .gitignore  README.md  prova.py  pyproject.toml  requirements.txt  run.py  web_api.py
config/: production.yaml
configs/: default.yaml  noise_profiles.yaml  personas.yaml  presets.py  presets.yaml
data/: clean_queries.txt
demo/: demo.cli.py  demo_cli.py
dictionaries/grammar/: contractions.json
dictionaries/slang/: genz.json  italian_genz.json
dictionaries/typos/: english.json  italian.json
experiments/: evaluate_output.py  evaluator.py  tune_params.py
humanizer/: __init__.py  core.py  generator.py  noise.py  personas.py  pipeline.py  style.py
humanizer/utils/: dictionary_loader.py  random_utils.py
humanizer_ai.egg-info/: PKG-INFO
synthetic/: evaluator.py
test/: test_basic.py
