[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "humanizer-ai"
version = "0.1.0"
description = "Control how AI sounds. Make LLM outputs more human."
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "pyyaml>=6.0"
]

keywords = ["ai", "nlp", "llm", "synthetic-data", "chatbot", "text-processing"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/your-username/humanizer-ai"
Repository = "https://github.com/your-username/humanizer-ai"

[tool.setuptools]
packages = ["humanizer"]

[project.scripts]
humanizer-cli = "demo.demo_cli:main"